# autonomous_mobile_robot

./: .gitignore  .gitmodules  Dockerfile  Dockerfile-jetson  Dockerfile-ubuntu20  README.md  potential_fields.py  requirements.txt  run_docker.sh
dev_ws/: run.sh  semantic_segmentation.sh  semantic_segmentation_nav.sh
dev_ws/src/dwa_planner/: CMakeLists.txt  package.xml
dev_ws/src/dwa_planner/include/dwa_planner/: dwa_planner.h
dev_ws/src/dwa_planner/src/: dwa_planner.cpp  dwa_planner_node.cpp  trajectory_publisher.cpp
dev_ws/src/semantic_segmentation/: package.xml  setup.cfg  setup.py
dev_ws/src/semantic_segmentation/semantic_segmentation/: PerspectiveTransform.npz  Untitled.ipynb  fchardnet.py  hardnet.py  semantic_segmentation.py  utils.py  warp_scan_segmentation.ipynb
dev_ws/src/semantic_segmentation/semantic_segmentation/.ipynb_checkpoints/: warp_scan_segmentation-checkpoint.ipynb
dev_ws/src/semantic_segmentation/semantic_segmentation/models/: __init__.py
dev_ws/src/vision/: package.xml  setup.py
dev_ws/src/vision/vision/: PerspectiveTransform.npz  PerspectiveTransformSim.npz  Untitled.ipynb  _calculate_perspective_transform.ipynb  _calculate_perspective_transform_old.ipynb  _navigation_class-paper-figs.ipynb  _navigation_class.ipynb  _perception_steps.ipynb  _semseg_pspnet.ipynb  calculate_perspective_transform.ipynb  costmap.py  dl_perception.py  fchardnet_segmentation.py  helpers.py  navigation.py  navigation_class.ipynb  object_detection.py  perception.ipynb  planner.py  pspnet_segmentation.py  segmentation.py  test_hub.py  utils.py  vision_node.py  warp_scan_segmentation.ipynb
dev_ws/src/vision/vision/cfg/: gazebosim_fchardnet_navigation.yaml  outdoor_pspnet50_navigation.yaml
semantic_nav/: Dockerfile  requirements.txt  run_docker.sh
semantic_nav/dev_ws/: run.sh
semantic_nav/dev_ws/src/dwa_planner/: package.xml
semantic_nav/dev_ws/src/dwa_planner/src/: dwa_planner.cpp
semantic_nav/dev_ws/src/vision/: package.xml  setup.py
semantic_nav/dev_ws/src/vision/vision/: PerspectiveTransform.npz  PerspectiveTransformLogitech.npz  _calculate_perspective_transform.ipynb  _perception_steps.ipynb  (+8 more)
(+15 files in other folders)
